# tinypipe

./: .commit_msg  .env  .gitignore  AGENTS.md  README.md  commit_msg.txt  coverage.txt  hatch_build.py  pyproject.toml  uv.toml
.github/workflows/: ci.yml  release.yml
benchmarks/: README.md  __init__.py  test_observer_stress.py
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md  workflow.md
dashboard-ui/: index.html  package-lock.json  package.json  vite.config.ts
dashboard-ui/src/: App.vue  router.ts  style.css
docs/: README.md  observability.md  runtime_kernel.md  terminal_semantics.md
docs/advanced/: concurrency.md
docs/architecture/: kernel.md
docs/concepts/: observability.md  terminal_semantics.md
docs/guides/: concurrency.md  lifecycle_hooks.md  middleware.md
docs/testing/: fuzzing.md  harness.md
examples/: README.md  utils.py
examples/01_quick_start/: README.md  main.py
examples/02_parallel_dag/: README.md  main.py
examples/03_dynamic_map/: README.md  main.py
examples/04_dynamic_routing/: README.md  main.py
examples/05_suspension_resume/: README.md  main.py
examples/06_subpipelines/: README.md  main.py
examples/07_streaming/: README.md  main.py
examples/08_reliability_retry/: README.md  main.py
examples/09_middleware/: README.md  main.py
examples/10_lifecycle_hooks/: README.md  main.py
examples/11_visualization/: README.md  main.py
examples/12_observability/: README.md  cli_workflow_demo.py  main.py  metrics_demo.py  observers_demo.py  replay_demo.py
examples/13_barrier_types/: README.md  main.py
examples/14_testing_harness/: README.md  main.py
examples/15_real_llm_streaming/: README.md  main.py
examples/16_dashboard_showcase/: README.md  main.py
justpipe/: __init__.py  core.py  failures.py  graph.py  handlers.py  invoker.py  middleware.py  pipe.py  registry.py  runner.py  steps.py  testing.py  types.py  utils.py
justpipe/_internal/: types.py
justpipe/cli/: README.md  __init__.py  formatting.py  main.py  registry.py
justpipe/dashboard/: __init__.py  api.py  serializers.py  server.py
justpipe/observability/: __init__.py  _step_pairing.py  _worker_cleanup.py  barrier.py  compare.py  logger.py  metrics.py  replay.py  state.py  storage.py  timeline.py
justpipe/storage/: __init__.py  interface.py  memory.py  sqlite.py
justpipe/visualization/: __init__.py  ast.py  builder.py  mermaid.py  renderer.py
scripts/: update_example_graphs.py
tests/: README.md  factories.py
tests/functional/: conftest.py  test_advanced_flow.py  test_backpressure.py  test_barrier_timeout.py  test_barrier_types.py  test_cli_commands.py  test_client_close_status.py  test_edge_cases.py  test_error_handling.py  test_event_ordering.py  test_examples_execution.py  test_examples_utils.py  test_execution.py  test_injection.py  test_lifecycle.py  test_middleware.py  test_pipe_immutability.py  test_pipeline_meta.py  test_pipeline_persistence.py  test_registration.py  test_return_value_warnings.py  test_routing.py  test_runtime_contracts.py  test_runtime_metrics_functional.py  test_shutdown.py  test_start_scope_validation.py  test_switch_continuation.py  test_testpipe_harness.py  test_visualization.py
tests/fuzzing/: test_fuzz_advanced.py  test_fuzz_pipeline.py
tests/unit/: fakes.py  (+29 more)
tinypipe/: core.py
(+183 files in other folders)
