[project]
name = "tinypipe"
version = "0.1.0"
description = "Your code is the graph. Async, streaming pipelines for AI."
readme = "README.md"
authors = [
    { name = "Pavel Larkin", email = "laxkin@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.urls]
Homepage = "https://github.com/plar/tinypipe"
Repository = "https://github.com/plar/tinypipe"
Issues = "https://github.com/plar/tinypipe/issues"

[project.optional-dependencies]
retry = [
    "tenacity>=9.1.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.8.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=7.0.0",
    "ruff>=0.1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true