[project]
name = "justpipe"
dynamic = ["version"]
description = "Your code is the graph. Async, streaming pipelines for AI."
# ... (keeping existing fields)
readme = "README.md"
authors = [
    { name = "Pavel Larkin", email = "laxkin@gmail.com" }
]
keywords = ["async", "pipeline", "orchestration", "ai", "llm", "dag", "streaming"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.0.0",
    "rich>=13.0.0",
]

[project.urls]
Homepage = "https://github.com/plar/justpipe"
Repository = "https://github.com/plar/justpipe"
Issues = "https://github.com/plar/justpipe/issues"

[project.scripts]
justpipe = "justpipe.cli.main:main"

[project.optional-dependencies]
retry = [
    "tenacity>=9.1.2",
]
dashboard = [
    "fastapi>=0.100",
    "uvicorn[standard]>=0.20",
]
examples = [
    "openai>=1.0.0",
    "google-genai>=0.3.0",
    "rich>=13.0.0",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build]
artifacts = ["justpipe/dashboard/static/**"]

[tool.hatch.build.hooks.custom]

[dependency-groups]
dev = [
    "mypy>=1.8.0",
    "mutmut>=2.5.1",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-benchmark>=5.1.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.1.0",
    "coverage-badge>=1.1.0",
    "pytest-repeat>=0.9.4",
    "hypothesis>=6.151.4",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "slow: optional long-running correctness tests",
]

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = ["examples/"]

[tool.mypy]
python_version = "3.12"
strict = true
exclude = ["examples/"]


[tool.mutmut]
tests_dir = ["tests"]
pytest_add_cli_args = ["-q"]
also_copy = ["justpipe", "examples"]
paths_to_mutate = [
    "justpipe/_internal/definition/type_resolver.py",
    "justpipe/_internal/runtime/engine/pipeline_runner.py",
    "justpipe/visualization/builder.py",
]
pytest_add_cli_args_test_selection = ["tests/unit", "tests/functional", "tests/integration"]